# Pokemon

./: .gitignore  README.md  pyproject.toml
pokemon_ai/: __init__.py
pokemon_ai/agents/: __init__.py  poke_env_agent.py
pokemon_ai/configs/: default.yaml  h100_1gpu.yaml  h100_2gpu.yaml  h100_8gpu.yaml  pokechamp.yaml  shards_2gpu.yaml  test_2080.yaml
pokemon_ai/data/: __init__.py  dataset.py  pokechamp_dataset.py  pokechamp_parser.py  replay_parser.py  shard_dataset.py  state_converter.py  tokenizer.py
pokemon_ai/models/: __init__.py  opponent_model.py  pokemon_transformer.py  turn_encoder.py  world_model.py
pokemon_ai/training/: __init__.py  losses.py  offline_rl.py
scripts/: convert_metamon_data.py  debug_nan.py  download_all_data.py  download_and_preprocess_metamon.py  download_hf_data.py  download_pokechamp.py  download_replays.py  evaluate.py  fast_download.py  inspect_pokechamp.py  preprocess_to_shards.py  process_replays.py  run_multi_gpu.bat  run_multi_gpu.sh  run_single_gpu.bat  run_single_gpu.sh  run_torchrun.sh  runpod_setup.sh  self_play.py  train.py
